fix(cors): remove Express 5-incompatible preflight route; keep helmet + CORS allow-list  - Drop app.options('*', cors(...)) to avoid path-to-regexp crash on Express 5 - Deny disallowed origins via cb(null, false) (no 500s on preflight) - Preserve order: helmet → cors → parsers → routes (no behavior changes)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
-
 # JWT Secret for token signing/verification
 JWT_SECRET=dev-secret
 
-# Stripe webhook signing secret
+# Stripe webhook signing secret (set when billing/webhooks are enabled)
 STRIPE_SIGNING_SECRET=whsec_xxx
+
+# CORS allow‑list: comma‑separated origins. Example:
+# CORS_ORIGIN=https://app.example.com,https://admin.example.com
+# Notes:
+#  - Browser requests from origins not in this list will be blocked by CORS.
+#  - Requests without an Origin header (tests, curl, webhooks) are allowed.
+CORS_ORIGIN=
+
