--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/node": "^22.13.11",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "cors": "^2.8.5",
     "eslint-config-prettier": "^10.1.8",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "openai": "^5.10.2",
