feat(rate-limit): add per-user/IP limiters for chat and uploads  - New middleware /middleware/rateLimit.js using express-rate-limit - Mounted after auth, before validate/quota on /api/chat and /api/datasets/upload - Return 429 with {"error":"RATE_LIMIT"} and Retry-After header - IPv6-safe keying via ipKeyGenerator to eliminate warnings - Documented env knobs in .env.example (safe defaults)

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ STRIPE_SIGNING_SECRET=whsec_xxx
 #  - Requests without an Origin header (tests, curl, webhooks) are allowed.
 CORS_ORIGIN=
 
+# Rate limiting (defaults are safe for tests/dev)
+RATE_LIMIT_CHAT_WINDOW_MS=60000
+RATE_LIMIT_CHAT_MAX=25
+RATE_LIMIT_UPLOAD_WINDOW_MS=60000
+RATE_LIMIT_UPLOAD_MAX=10
+# If behind a proxy and you need accurate client IPs, enable trust proxy later:
+# RATE_LIMIT_TRUST_PROXY=false
+
