tASK 4 DONE "feat(billing): mount Stripe webhook before helmet/cors/json; add Dormant-Until-Live guard; add integration/disabled/DB-error tests; keep test env green" git push origin HEAD

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,65 @@
-# JWT Secret for token signing/verification
+# =========================
+# Core Auth & Platform
+# =========================
+
+# JWT Secret for token signing/verification (use a strong, unique secret in prod)
 JWT_SECRET=dev-secret
 
-# Stripe webhook signing secret (set when billing/webhooks are enabled)
-STRIPE_SIGNING_SECRET=whsec_xxx
+# =========================
+# Supabase (Database/API)
+# =========================
 
-# CORS allow‑list: comma‑separated origins. Example:
-# CORS_ORIGIN=https://app.example.com,https://admin.example.com
-# Notes:
-#  - Browser requests from origins not in this list will be blocked by CORS.
-#  - Requests without an Origin header (tests, curl, webhooks) are allowed.
+# The base URL of your Supabase project (e.g., https://xyzcompany.supabase.co)
+SUPABASE_URL=
+# Service key preferred for server-side; falls back to ANON if not set (tests mock network)
+SUPABASE_SERVICE_KEY=
+# Optional: Public anon key (only if you intentionally want to run with anon)
+SUPABASE_ANON_KEY=
+
+# =========================
+# OpenAI
+# =========================
+
+# API key for OpenAI
+OPENAI_API_KEY=
+
+# =========================
+# Stripe (Billing/Webhooks)
+# =========================
+# Leave these blank until billing is enabled.
+# If not set (or STRIPE_ENABLED=false), webhook returns 501 “Billing not enabled”.
+
+# Secret key for Stripe API calls (NOT required for webhook verification or tests)
+STRIPE_API_KEY=
+# Webhook signing secret (from Stripe Dashboard → Developers → Webhooks)
+STRIPE_SIGNING_SECRET=
+# Optional feature flag if you want an explicit switch
+STRIPE_ENABLED=
+
+# =========================
+# CORS
+# =========================
+
+# Comma-separated allow-list of origins (e.g., https://app.example.com,https://admin.example.com)
+# Requests without an Origin header (tests, curl, webhooks) are allowed.
 CORS_ORIGIN=
 
-# Rate limiting (defaults are safe for tests/dev)
+# =========================
+# Rate Limiting
+# =========================
+
+# Chat endpoint window (ms) and max requests
 RATE_LIMIT_CHAT_WINDOW_MS=60000
 RATE_LIMIT_CHAT_MAX=25
+# Upload endpoint window (ms) and max requests
 RATE_LIMIT_UPLOAD_WINDOW_MS=60000
 RATE_LIMIT_UPLOAD_MAX=10
-# If behind a proxy and you need accurate client IPs, enable trust proxy later:
-# RATE_LIMIT_TRUST_PROXY=false
+# If behind a proxy/CDN, set true and configure trust proxy
+RATE_LIMIT_TRUST_PROXY=false
 
+# =========================
+# Logging
+# =========================
+
+# LOG_LEVEL can be: error | warn | info | debug
+LOG_LEVEL=info
